# phone-call-input

./: .eslintcache  .eslintrc.cjs  .gitignore  app.json  doppler.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.eslint.json  tsconfig.json
scripts/: build.ts
src/: index.ts
src/python/: secure-input.py
src/secure-input/: Cargo.toml  index.js  napi.config.json
src/utils/: call.ts  ngrok.ts  passcode.ts  phone-call-input.ts  phone-call-pass.ts  port.ts  secure-input.ts  server.ts  spinner.ts
typings/: secure-input.d.ts
typings/env/: index.d.ts
