[package]
edition = "2021"
name = "secure-input"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.1", features = ["napi4"] }
napi-derive = "2.3.0"
serde_json = "1"
plist = "1.3.1"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
